CallSets now embedded in Samples